@@ -1,0 +1,7 @@
+#!/bin/sh
+
+aclocal
+autoheader
+automake -a -c
+autoconf
+./configure "$@"
